MET-5678 Fix not working tests Fix code smells