@@ -8,7 +8,6 @@ import eu.europeana.cloud.service.mcs.RecordService;
 import eu.europeana.cloud.service.mcs.RestInterfaceConstants;
 import eu.europeana.cloud.service.mcs.exception.CannotModifyPersistentRepresentationException;
 import eu.europeana.cloud.service.mcs.exception.CannotPersistEmptyRepresentationException;
-import eu.europeana.cloud.service.mcs.exception.DataSetAssignmentException;
 import eu.europeana.cloud.service.mcs.exception.RepresentationNotExistsException;
 import eu.europeana.cloud.service.mcs.persistent.cassandra.CassandraRecordDAO;
 import eu.europeana.cloud.service.mcs.status.McsErrorCode;
@@ -16,6 +15,7 @@ import eu.europeana.cloud.service.mcs.utils.DataSetPermissionsVerifier;
 import jakarta.ws.rs.core.HttpHeaders;
 import junitparams.JUnitParamsRunner;
 import junitparams.Parameters;
+import org.hamcrest.MatcherAssert;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -24,14 +24,14 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.ResultActions;
 import org.springframework.web.util.UriComponentsBuilder;
 
-import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
 import java.util.Optional;
 
 import static eu.europeana.cloud.service.mcs.utils.MockMvcUtils.*;
 import static junitparams.JUnitParamsRunner.$;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -41,26 +41,22 @@ public class RepresentationVersionResourceTest extends AbstractResourceTest {
 
   private RecordService recordService;
 
-  static final private String globalId = "1";
-  static final private String schema = "DC";
-  static final private String version = "1.0";
-  static final private String fileName = "1.xml";
-  static final private String persistPath =
+  private static final String GLOBAL_ID = "1";
+  private static final String SCHEMA = "DC";
+  private static final String VERSION = "1.0";
+  private static final String FILE_NAME = "1.xml";
+  private static final String PERSIST_PATH =
       UriComponentsBuilder.fromUriString(RestInterfaceConstants.REPRESENTATION_VERSION_PERSIST)
-                          .build(globalId, schema, version).toString();
-
-  static final private String copyPath =
-      UriComponentsBuilder.fromUriString(RestInterfaceConstants.REPRESENTATION_VERSION_COPY)
-                          .build(globalId, schema, version).toString();
+                          .build(GLOBAL_ID, SCHEMA, VERSION).toString();
 
 
-  static final private Representation representation = new Representation(globalId, schema, version, null, null,
-      "DLF", Arrays.asList(new File(fileName, "text/xml", "91162629d258a876ee994e9233b2ad87", "2013-01-01",
-      12345, null)), null, true, new Date());
+  private static final Representation REPRESENTATION = new Representation(GLOBAL_ID, SCHEMA, VERSION, null, null,
+      "DLF", List.of(new File(FILE_NAME, "text/xml", "91162629d258a876ee994e9233b2ad87", "2013-01-01",
+          12345, null)), null, true, new Date());
 
 
   @Before
-  public void mockUp() throws RepresentationNotExistsException, DataSetAssignmentException {
+  public void mockUp() throws RepresentationNotExistsException {
     recordService = applicationContext.getBean(RecordService.class);
     CassandraRecordDAO cassandraRecordDAO = applicationContext.getBean(CassandraRecordDAO.class);
     DataSetPermissionsVerifier dataSetPermissionsVerifier = applicationContext.getBean(DataSetPermissionsVerifier.class);
@@ -84,19 +80,20 @@ public class RepresentationVersionResourceTest extends AbstractResourceTest {
   @Test
   @Parameters(method = "mimeTypes")
   public void testGetRepresentationVersion(MediaType mediaType) throws Exception {
-    Representation expected = new Representation(representation);
+    Representation expected = new Representation(REPRESENTATION);
     URITools.enrich(expected, getBaseUri());
-    when(recordService.getRepresentation(globalId, schema, version)).thenReturn(new Representation(representation));
+    when(recordService.getRepresentation(GLOBAL_ID, SCHEMA, VERSION)).thenReturn(new Representation(REPRESENTATION));
 
-    ResultActions response = mockMvc.perform(get(URITools.getVersionPath(globalId, schema, version)).accept(mediaType))
+    ResultActions response = mockMvc.perform(get(URITools.getVersionPath(GLOBAL_ID, SCHEMA, VERSION)).accept(mediaType))
                                     .andExpect(status().isOk())
                                     .andExpect(content().contentType(mediaType));
 
     Representation entity = responseContent(response, Representation.class, mediaType);
     assertThat(entity, is(expected));
-    verify(recordService, times(1)).getRepresentation(globalId, schema, version);
+    verify(recordService, times(1)).getRepresentation(GLOBAL_ID, SCHEMA, VERSION);
     verifyNoMoreInteractions(recordService);
   }
+
 
   private Object[] errors() {
     return $($(new RepresentationNotExistsException(), McsErrorCode.REPRESENTATION_NOT_EXISTS.toString(), 404));
@@ -108,22 +105,22 @@ public class RepresentationVersionResourceTest extends AbstractResourceTest {
   public void testGetRepresentationVersionReturns404IfRepresentationOrRecordOrVersionDoesNotExists(
       Throwable exception, String errorCode, int statusCode)
       throws Exception {
-    when(recordService.getRepresentation(globalId, schema, version)).thenThrow(exception);
+    when(recordService.getRepresentation(GLOBAL_ID, SCHEMA, VERSION)).thenThrow(exception);
 
-    ResultActions response = mockMvc.perform(get(URITools.getVersionPath(globalId, schema, version))
+    ResultActions response = mockMvc.perform(get(URITools.getVersionPath(GLOBAL_ID, SCHEMA, VERSION))
                                         .accept(MediaType.APPLICATION_XML))
                                     .andExpect(status().is(statusCode));
 
     ErrorInfo errorInfo = responseContentAsErrorInfo(response, MediaType.APPLICATION_XML);
-    assertThat(errorInfo.getErrorCode(), is(errorCode));
-    verify(recordService, times(1)).getRepresentation(globalId, schema, version);
+    MatcherAssert.assertThat(errorInfo.getErrorCode(), is(errorCode));
+    verify(recordService, times(1)).getRepresentation(GLOBAL_ID, SCHEMA, VERSION);
     verifyNoMoreInteractions(recordService);
   }
 
 
   @Test
   public void testGetRepresentationVersionReturns406ForUnsupportedFormat() throws Exception {
-    mockMvc.perform(get(URITools.getVersionPath(globalId, schema, version))
+    mockMvc.perform(get(URITools.getVersionPath(GLOBAL_ID, SCHEMA, VERSION))
                .accept(MEDIA_TYPE_APPLICATION_SVG_XML))
            .andExpect(status().isNotAcceptable());
   }
@@ -132,9 +129,9 @@ public class RepresentationVersionResourceTest extends AbstractResourceTest {
   @Test
   public void testDeleteRepresentation()
       throws Exception {
-    mockMvc.perform(delete(URITools.getVersionPath(globalId, schema, version)))
+    mockMvc.perform(delete(URITools.getVersionPath(GLOBAL_ID, SCHEMA, VERSION)))
            .andExpect(status().isNoContent());
-    verify(recordService, times(1)).deleteRepresentation(globalId, schema, version);
+    verify(recordService, times(1)).deleteRepresentation(GLOBAL_ID, SCHEMA, VERSION);
     verifyNoMoreInteractions(recordService);
   }
 
@@ -144,14 +141,14 @@ public class RepresentationVersionResourceTest extends AbstractResourceTest {
   public void testDeleteRepresentationReturns404IfRecordOrRepresentationDoesNotExists(Throwable exception,
       String errorCode, int statusCode)
       throws Exception {
-    Mockito.doThrow(exception).when(recordService).deleteRepresentation(globalId, schema, version);
+    Mockito.doThrow(exception).when(recordService).deleteRepresentation(GLOBAL_ID, SCHEMA, VERSION);
 
-    ResultActions response = mockMvc.perform(delete(URITools.getVersionPath(globalId, schema, version)))
+    ResultActions response = mockMvc.perform(delete(URITools.getVersionPath(GLOBAL_ID, SCHEMA, VERSION)))
                                     .andExpect(status().is(statusCode));
 
     ErrorInfo errorInfo = responseContentAsErrorInfo(response);
     assertThat(errorInfo.getErrorCode(), is(errorCode));
-    verify(recordService, times(1)).deleteRepresentation(globalId, schema, version);
+    verify(recordService, times(1)).deleteRepresentation(GLOBAL_ID, SCHEMA, VERSION);
     verifyNoMoreInteractions(recordService);
   }
 
@@ -159,15 +156,15 @@ public class RepresentationVersionResourceTest extends AbstractResourceTest {
   @Test
   public void testPersistRepresentation()
       throws Exception {
-    when(recordService.persistRepresentation(globalId, schema, version)).thenReturn(
-        new Representation(representation));
+    when(recordService.persistRepresentation(GLOBAL_ID, SCHEMA, VERSION)).thenReturn(
+        new Representation(REPRESENTATION));
 
-    mockMvc.perform(post(persistPath).contentType(MediaType.APPLICATION_FORM_URLENCODED))
+    mockMvc.perform(post(PERSIST_PATH).contentType(MediaType.APPLICATION_FORM_URLENCODED))
            .andExpect(status().isCreated())
            .andExpect(
-               header().string(HttpHeaders.LOCATION, URITools.getVersionUri(getBaseUri(), globalId, schema, version).toString()));
+               header().string(HttpHeaders.LOCATION, URITools.getVersionUri(getBaseUri(), GLOBAL_ID, SCHEMA, VERSION).toString()));
 
-    verify(recordService, times(1)).persistRepresentation(globalId, schema, version);
+    verify(recordService, times(1)).persistRepresentation(GLOBAL_ID, SCHEMA, VERSION);
     verifyNoMoreInteractions(recordService);
   }
 
@@ -177,14 +174,14 @@ public class RepresentationVersionResourceTest extends AbstractResourceTest {
   public void testPersistRepresentationReturns40XIfExceptionOccur(Throwable exception, String errorCode,
       int statusCode)
       throws Exception {
-    when(recordService.persistRepresentation(globalId, schema, version)).thenThrow(exception);
+    when(recordService.persistRepresentation(GLOBAL_ID, SCHEMA, VERSION)).thenThrow(exception);
 
-    ResultActions response = mockMvc.perform(post(persistPath).contentType(MediaType.APPLICATION_FORM_URLENCODED))
+    ResultActions response = mockMvc.perform(post(PERSIST_PATH).contentType(MediaType.APPLICATION_FORM_URLENCODED))
                                     .andExpect(status().is(statusCode));
 
     ErrorInfo errorInfo = responseContentAsErrorInfo(response);
     assertThat(errorInfo.getErrorCode(), is(errorCode));
-    verify(recordService, times(1)).persistRepresentation(globalId, schema, version);
+    verify(recordService, times(1)).persistRepresentation(GLOBAL_ID, SCHEMA, VERSION);
     verifyNoMoreInteractions(recordService);
   }
 
